# brc721

./: .env  .env.example  .env.testing  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.testing.yml  docker-compose.yml  scanner.rs.backup
.github/workflows/: docker.yml  rust.yml
.serena/: project.yml
deployment/: README.md  helmfile.yaml  helmfile.yaml.gotmpl  values-digitalocean.yaml  values-local.yaml  values-prod-digitalocean.yaml  values-prod-local.yaml
deployment/charts/bitcoind/: Chart.yaml  values.yaml
docker/: bitcoin-regtest.conf  bitcoin.conf  bitcoind.conf
src/: api.rs  app.rs  bitcoin_rpc.rs  cli.rs  configuration.rs  context.rs  core.rs  db.rs  main.rs  network.rs  p2p.rs  parser.rs  rest.rs  scanner.rs  storage.rs  tests.rs  tracing.rs  types.rs  wallet.rs
src/app/: mod.rs  wiring.rs
src/cli/: args.rs  command.rs  mod.rs  tx_cmd.rs  wallet_cmd.rs
src/commands/: mod.rs  tx.rs  wallet.rs
src/db/: mod.rs  repository.rs  sqlite.rs
src/integration_tests/: basic.rs  mod.rs  txs.rs  wallet.rs
src/parser/: brc721_parser.rs  create_collection.rs  mix.rs  mod.rs  parser.rs  register_collection.rs  register_ownership.rs  traits.rs
src/rest/: handlers.rs  mod.rs  models.rs
src/scanner/: fetcher.rs  mod.rs  p2p.rs  rpc.rs
src/storage/: collection.rs  file.rs  mod.rs  sqlite.rs  token.rs  traits.rs
src/txs/: mod.rs  send_balance.rs
src/types/: brc721_command.rs  brc721_error.rs  brc721_message.rs  brc721_op_return_output.rs  brc721_output.rs  brc721_payload.rs  brc721_token.rs  brc721_tx.rs  mix.rs  mod.rs  register_collection.rs  register_ownership.rs  varint96.rs
src/wallet/: brc721_wallet.rs  cmd.rs  local_wallet.rs  master_key_store.rs  mod.rs  ops.rs  passphrase.rs  paths.rs  remote_wallet.rs  service.rs  signer.rs  tx.rs  types.rs
tests/: e2e_balance.rs  e2e_bitcoind_ready.rs  e2e_raw_output.rs  e2e_register_collection.rs  e2e_register_ownership.rs  e2e_send_amount.rs  e2e_try_docker.rs  e2e_wallet_recreate.rs  regtest_smoke.rs
tests/common/: mod.rs
(+13 files in other folders)
