[package]
name = "brc721"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoincore-rpc = "0.19"
bitcoin = { version = "0.32", features = ["serde"] }
dotenvy = "0.15"
hex = "0.4"
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = { version = "0.7", features = ["macros", "json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
