[package]
name = "brc721"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoincore-rpc = "0.19"
bitcoin = { version = "0.32", features = ["serde"] }
dotenvy = "0.15"
hex = "0.4"
clap = { version = "4", features = ["derive", "env"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
ethereum-types = "0.16.0"
thiserror = "2.0.17"

[dev-dependencies]
hex = "0.4"
