[package]
name = "brc721"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoincore-rpc = "0.19"
bitcoin = { version = "0.32", features = ["serde"] }
dotenvy = "0.15"
hex = "0.4"
clap = { version = "4", features = ["derive", "env"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
ethereum-types = "0.16.0"
thiserror = "2.0.17"
bdk_wallet = { version = "2.2", features = ["rusqlite", "keys-bip39"] }
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
tracing-log = "0.2"
anyhow = "1.0.100"
sha2 = "0.10.9"
url = "2.5.7"

[dev-dependencies]
bdk_bitcoind_rpc = "0.22.0"
corepc-node = { version = "0.8.0", features = ["26_2", "download"] }
tempfile = "3.10"
testcontainers = { version = "0.22", features = ["blocking"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
